[package]
name = "lilac-cli"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "LILAC playback and transcoding utility"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.17"
glob = "0.3"
lilac = { path = "..", features = ["playback", "conversion"] }
rayon = "1"
rodio = { version = "0.11", default-features = false }
structopt = "0.3"
tui = { version = "0.9", features = ["crossterm"], default-features = false }
